# detachment

./: README.md  install.sh
data/: company_dict_insiders.txt
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  graph_statistics.py  install_manifest.txt  plot_results.py  randomgraph.py  run_experiments  run_experiments.cpp  visualize_results.py
src/Algorithms/: CMakeLists.txt  algorithms.cpp  algorithms.hpp
src/Graph/: CMakeLists.txt  Makefile  cmake_install.cmake  graph.cpp  graph.hpp
src/Tests/: CMakeLists.txt  tests.cpp  tests.hpp
src/Utils/: CMakeLists.txt  grandom.cpp  grandom.h  grandom.hpp  utils.cpp  utils.hpp
